feat: show first landfall point AB#16220 AB#16221

--- a/interfaces/IBF-dashboard/src/global.scss
+++ b/interfaces/IBF-dashboard/src/global.scss
@@ -215,6 +215,11 @@
   background: rgba(var(--ion-color-ibf-white-rgb), 0.8);
 }
 
+.typhoon-track-icon-future-firstLandfall {
+  border-style: dashed;
+  background: rgba(var(--ion-color-ibf-white-rgb), 0.8);
+}
+
 .typhoon-track-icon-past {
   border-style: solid;
   background: var(--ion-color-ibf-primary);
