feat: override outline:none on click AB#16241

--- a/interfaces/IBF-dashboard/src/global.scss
+++ b/interfaces/IBF-dashboard/src/global.scss
@@ -216,7 +216,7 @@
 }
 
 .typhoon-track-icon-firstLandfall {
-  outline: 3px solid var(--ion-color-ibf-primary);
+  outline: 3px solid var(--ion-color-ibf-primary) !important;
   outline-offset: 3px;
 }
 
