--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -69,6 +69,9 @@
               [class.outline-layer]="
                 layer.name === IbfLayerName.alertThreshold && layer.active
               "
+              [class.evacuation-center-layer]="
+                layer.name === IbfLayerName.evacuationCenters && layer.active
+              "
               [style.background]="
                 layer.active
                   ? layer.legendColor
