--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.scss
@@ -52,6 +52,9 @@
             .health-layer {
               background-image: url('../../../assets/markers/health-facility.png');
             }
+            .evacuation-center-layer {
+              background-image: url('../../../assets/markers/evacuation-center.png');
+            }
             .outline-layer {
               border: solid;
               border-color: var(--ion-color-ibf-outline-red) !important;
