feat: show no timeline button if no event typhoon AB#16426

--- a/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
@@ -18,6 +18,7 @@
     data-test="timeline-button"
     [class.active]="timeStepButton.active"
     [class.alert]="timeStepButton.alert && !timeStepButton?.disabled"
+    [class.noEvent]="timeStepButton.noEvent"
     (click)="handleTimeStepButtonClick(timeStepButton.value)"
   >
     <app-date-button
