--- a/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.scss
@@ -25,4 +25,9 @@ ion-button {
     border: 2px solid var(--ion-color-ibf-outline-red) !important;
     border-width: 2px;
   }
+
+  &.active.noEvent {
+    border: none;
+    font-weight: 500;
+  }
 }
