fix: ux copy AB#16744

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -86,7 +86,7 @@
         [innerHTML]="
           'chat-component.' +
             disasterTypeName +
-            '.active-event-below-trigger.welcome'
+            '.active-event-active-trigger.welcome-below-trigger'
             | translate
               : {
                   startDate: event.startDate,
