--- a/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.scss
@@ -6,7 +6,7 @@ ion-item {
 
 ion-button {
   height: 100% !important;
-  width: 90px;
+  min-width: 90px;
   text-transform: uppercase;
   --box-shadow: none;
 
