--- a/interfaces/IBF-dashboard/src/app/components/toggle-trigger-popover/toggle-trigger-popover.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/toggle-trigger-popover/toggle-trigger-popover.component.html
@@ -16,7 +16,11 @@
       <span
         [innerHTML]="
           'chat-component.generic.' + stopNode + '.' + eapNode + '.message'
-            | translate: { placeCodeName: placeCodeName, disasterSpecificText: getDisasterSpecificText() }
+            | translate
+              : {
+                  placeCodeName: placeCodeName,
+                  disasterSpecificText: getDisasterSpecificText()
+                }
         "
       >
       </span>
