--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.scss
@@ -49,8 +49,6 @@
 }
 
 .aggregate-item-value {
-  --inner-padding-end: 20%;
-
   ion-label {
     margin: 0px !important;
     font-size: 12px;
@@ -58,10 +56,11 @@
   }
 }
 
-.aggregate-item-value,
 .aggregate-item-information-icon {
   ion-label {
-    margin: 0px !important;
+    margin: 0px 2px !important;
+    padding-top: 0.2em;
+    max-width: 20px;
   }
 }
 
