feat: show aof-description in frontend AB#17000

--- a/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.html
@@ -56,7 +56,7 @@
           </ion-thumbnail>
           <ion-label
             class="areas-of-focus-item-label"
-            [title]="areaOfFocus.label"
+            [title]="areaOfFocus.description"
           >
             {{ areaOfFocus.label }}
           </ion-label>
