--- a/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.scss
@@ -45,6 +45,9 @@
     padding: 4px 4px;
     font-size: 12px;
     margin: 0px !important;
+    text-decoration: underline; 
+    text-decoration-style: dotted;
+    cursor: default;
   }
 }
 
