fix: give popups right header color depending on trigger mode AB#17006

--- a/interfaces/IBF-dashboard/src/app/components/ibf-guide-popover/ibf-guide-popover.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/ibf-guide-popover/ibf-guide-popover.component.html
@@ -1,5 +1,5 @@
 <ion-card data-test="ibf-guide-popover" class="popover-window-card">
-  <ion-card-header color="ibf-no-alert-primary">
+  <ion-card-header color="ibf-primary">
     <ion-icon
       name="close-circle"
       size="large"
