feat: align to design AB#17091

--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.scss
@@ -58,7 +58,7 @@
 
 .aggregate-item-information-icon {
   ion-label {
-    margin: 0px 2px !important;
+    margin: 0px auto !important;
     padding-top: 0.2em;
     max-width: 20px;
   }
