--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
@@ -120,7 +120,7 @@
             data-test="icon-row"
             style="--inner-padding-end: 0px"
           >
-            <ion-label class="ion-text-center">
+            <ion-label>
               <img
                 class="info-img"
                 src="assets/icons/source-info.svg"
