--- a/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.scss
@@ -19,7 +19,8 @@
 }
 
 .areas-of-focus-item,
-.areas-of-focus-item-value {
+.areas-of-focus-item-value,
+.areas-of-focus-item-information-icon {
   --min-height: 2rem;
   height: 2rem;
   --inner-padding-end: 0;
@@ -45,19 +46,32 @@
     padding: 4px 4px;
     font-size: 12px;
     margin: 0px !important;
-    text-decoration: underline;
-    text-decoration-style: dotted;
-    cursor: default;
+    white-space: normal !important;
+    padding: 0px 4px !important;
   }
 }
 
 .areas-of-focus-item-value {
   ion-label {
     margin: 0px !important;
+    font-size: 12px;
+    white-space: normal !important;
   }
-  --background: var(--ion-color-ibf-gray-light);
 
   span {
     font-size: 12px;
   }
+}
+
+.areas-of-focus-item-information-icon {
+  ion-label {
+    margin: 0px auto !important;
+    padding-top: 0.2em;
+    max-width: 20px;
+  }
+}
+
+.areas-of-focus-item-information-icon {
+  --inner-padding-end: 0.2rem;
+  cursor: pointer;
 }
