--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -154,7 +154,8 @@
                 >
                   <ion-row>
                     <ion-col>
-                      <app-aggregates></app-aggregates>
+                      <app-aggregates triggerStatus="trigger-active"></app-aggregates>
+                      <app-aggregates triggerStatus="trigger-stopped"></app-aggregates>
                     </ion-col>
                   </ion-row>
                   <ion-row>
