--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
@@ -9,7 +9,7 @@
         <ion-item
           lines="none"
           class="component-title-item ion-no-margin"
-          color="ibf-secondary"
+          [color]="isActiveAreas() ? 'ibf-secondary' : 'ibf-no-alert-tertiary'"
         >
           <ion-col class="ion-no-padding ion-no-margin ion-align-items-center">
             <ion-label
@@ -24,7 +24,7 @@
               "
             >
               <strong>
-                <ion-text color="ibf-primary" style="font-size: 20px">{{
+                <ion-text [color]="isActiveAreas() ? 'ibf-primary' : 'ibf-no-alert-primary'" style="font-size: 20px">{{
                   getNumberAreasExposed()
                 }}</ion-text>
                 {{ getLabelAreasExposed().headerLabel }}
@@ -41,8 +41,8 @@
           </ion-col>
           <ion-button
             fill="clear"
-            *ngIf="placeCode"
-            color="light"
+            *ngIf="shouldShowPlaceCode(placeCode)"
+            [color]="isActiveAreas() ? 'light' : 'ibf-no-alert-primary'"
             class="place-code-reset-button"
             (click)="clearPlaceCode()"
           >
