--- a/interfaces/IBF-dashboard/src/app/components/action-result-popover/action-result-popover.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/action-result-popover/action-result-popover.component.html
@@ -1,13 +1,7 @@
 <ion-card class="popover-window-card">
   <ion-card-header color="ibf-primary">
-    <ion-icon
-      name="close-circle"
-      size="large"
-      (click)="closePopover()"
-      class="popover-close-button"
-    ></ion-icon>
     <ion-card-title>{{
-      'chat-component.common.save-action.header' | translate
+      'chat-component.common.save-actions.header' | translate
     }}</ion-card-title>
   </ion-card-header>
   <ion-card-content class="ion-padding-top ion-text-center">
@@ -15,6 +9,20 @@
       <span>
         {{ message }}
       </span>
+    </ion-item>
+    <ion-item lines="none" style="width: 100%">
+      <div style="width: 100%" class="ion-text-end">
+        <ion-button
+          fill="clear"
+          style="text-transform: uppercase"
+          (click)="closePopover()"
+        >
+          {{
+            'chat-component.common.save-actions.prompt-button-label'
+              | translate
+          }}
+        </ion-button>
+      </div>
     </ion-item>
   </ion-card-content>
 </ion-card>
