--- a/interfaces/IBF-dashboard/src/app/components/action-result-popover/action-result-popover.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/action-result-popover/action-result-popover.component.html
@@ -18,8 +18,7 @@
           (click)="closePopover()"
         >
           {{
-            'chat-component.common.save-actions.prompt-button-label'
-              | translate
+            'chat-component.common.save-actions.prompt-button-label' | translate
           }}
         </ion-button>
       </div>
