--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -406,7 +406,8 @@
             expand="block"
             class="submit-button"
             [innerHTML]="
-              'chat-component.common.save-actions.submit-button-label' | translate
+              'chat-component.common.save-actions.submit-button-label'
+                | translate
             "
           ></ion-button>
         </ion-row>
