feat: show only placecode view on click or hover AB#17186

--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="shouldShowAggregates()">
+<div *ngIf="showAggregatesSection()">
   <ion-grid class="ion-no-padding">
     <ion-row
       class="component-title"
@@ -45,7 +45,7 @@
           </ion-col>
           <ion-button
             fill="clear"
-            *ngIf="shouldShowPlaceCode(placeCode)"
+            *ngIf="showPlaceCodeView(placeCode)"
             [color]="isActiveAreas() ? 'light' : 'ibf-no-alert-primary'"
             class="place-code-reset-button"
             (click)="clearPlaceCode()"
