feat: show "(stopped)" for stopped areas

--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
@@ -29,7 +29,14 @@
                   style="font-size: 20px"
                   >{{ getNumberAreasExposed() }}</ion-text
                 >
-                {{ getLabelAreasExposed().headerLabel }}
+                {{ getLabelAreasExposed().headerLabel
+                }}<span
+                  *ngIf="!isActiveAreas() && (placeCode || placeCodeHover)"
+                  >{{ ' '
+                  }}{{
+                    'aggregates-component.stopped-placecode' | translate
+                  }}</span
+                >
               </strong>
             </ion-label>
             <ion-label
