feat: specify "phones" for mobile AB#17166 AB#17189

--- a/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
@@ -60,7 +60,7 @@
               {{ 'ibf-guide-component.title' | translate }}
             </ion-button>
             <br />
-            <span [translate]="'login-page.note'"></span>
+            <span [innerHtml]="'login-page.note' | translate"></span>
           </ion-card-content>
           <app-timestamp class="ion-margin-end"></app-timestamp>
         </ion-card>
