fix: change title color to black AB#17198

--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
@@ -29,8 +29,11 @@
                   style="font-size: 20px"
                   >{{ getNumberAreasExposed() }}</ion-text
                 >
-                {{ getLabelAreasExposed().headerLabel
-                }}<span
+                <span style="color: var(--ion-color-ibf-black)">
+                  {{ getLabelAreasExposed().headerLabel }}
+                </span>
+                <span
+                  style="color: var(--ion-color-ibf-black)"
                   *ngIf="!isActiveAreas() && (placeCode || placeCodeHover)"
                   >{{ ' '
                   }}{{
