--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/activation-log/activation.log.page.scss
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/activation-log/activation.log.page.scss
@@ -1,25 +1,34 @@
 #table-header {
-  position: fixed;
+  position: sticky;
+  top: 0;
+  z-index: 1;
   opacity: 1;
-  z-index: 9999;
   background-color: #fff;
   width: fit-content;
+  .table-row {
+    border-top: 1px solid var(--ion-color-ibf-grey);
+  }
 }
 
 #table-body {
-  margin-top: 107px;
   width: fit-content;
 }
 
 .table-row {
-  height: 48px;
+  height: inherit;
+  border-right: 1px solid var(--ion-color-ibf-grey);
 }
 
 .table-cell {
   padding: 8px;
-  border: 1px solid var(--ion-color-ibf-grey);
+  border-left: 1px solid var(--ion-color-ibf-grey);
+  border-bottom: 1px solid var(--ion-color-ibf-grey);
   text-align: left;
   word-break: break-all;
   font-size: 10px;
   width: 7vw;
+}
+
+.explanation {
+  font-size: 14px;
 }
