fix: activation log explanation AB#17320

--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/activation-log/activation.log.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/activation-log/activation.log.page.html
@@ -24,6 +24,7 @@
     >
       <ion-row *ngIf="activationLogs['headerData']">
         <ion-col class="explanation" size="9">
+          <h4>{{ 'activation-page.page-title' | translate }}</h4>
           <p>{{ 'activation-page.page-explanation' | translate }}</p>
           <p>{{ 'activation-page.copy-instructions' | translate }}</p>
         </ion-col>
