feat: change icon color AB#15786

--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.scss
@@ -26,8 +26,8 @@
   --inner-padding-end: 0;
 
   .aggregate-item-thumbnail {
-    background: var(--ion-color-ibf-black);
-    border: 0.2rem solid var(--ion-color-ibf-black);
+    background: var(--ion-color-ibf-tertiary);
+    border: 0.2rem solid var(--ion-color-ibf-tertiary);
     width: 2rem;
     height: 2rem;
     align-self: start;
