--- a/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.scss
@@ -28,8 +28,8 @@
 
 .areas-of-focus-item {
   .areas-of-focus-item-thumbnail {
-    background: var(--ion-color-ibf-black);
-    border: 0.2rem solid var(--ion-color-ibf-black);
+    background: var(--ion-color-ibf-tertiary);
+    border: 0.2rem solid var(--ion-color-ibf-tertiary);
     width: 2rem;
     height: 2rem;
     align-self: start;
