--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -38,7 +38,7 @@
     </ion-list>
     <ion-list color="dark" class="ion-no-padding" [class.ion-hide]="!isDev">
       <ion-item
-        href="/activation-log"
+        href="/log"
         lines="full"
         rel="noopener noreferrer"
         target="_blank"
