--- a/interfaces/IBF-dashboard/src/app/components/disaster-type/disaster-type.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/disaster-type/disaster-type.component.scss
@@ -1,27 +1,30 @@
+ion-row,
+.disaster-type-button-container,
+ion-spinner {
+  background-color: #fff;
+}
+
+ion-icon {
+  cursor: pointer;
+}
+
+ion-spinner {
+  cursor: default;
+}
+
 .active {
   background-color: var(--ion-color-ibf-chat-self);
 }
+
 .containerDiv {
   line-height: 1px;
   margin: 0px 2px 0px 2px;
   display: flex;
 }
-.containerOne {
-  justify-content: space-between;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  cursor: pointer;
-}
-.containerTwo {
+
+.disaster-type-button {
   display: block;
   margin: 0px 2px 0px 2px;
   height: 32px;
   width: 32px;
-  cursor: pointer;
-}
-.containerThree {
-  font-size: 10px;
-  padding: 5px;
-  display: block;
 }
