fix: update tests + enable typhoon test AB#17590

--- a/interfaces/IBF-dashboard/src/app/components/disaster-type/disaster-type.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/disaster-type/disaster-type.component.html
@@ -6,6 +6,7 @@
     <ion-icon
       (click)="switchDisasterType(disasterType)"
       class="disaster-type-button"
+      [ngClass]="disasterType?.activeTrigger ? 'triggered' : ''"
       data-test="disaster-type-button"
       [src]="
         getButtonSvg(disasterType.disasterType, disasterType.activeTrigger)
